--- a/serverless.yml
+++ b/serverless.yml
@@ -5,8 +5,6 @@ provider:
   runtime: nodejs4.3
   region: us-east-1
   stage: dev
-  environment:
-    FAUNADB_SECRET: MY_FAUNADB_SERVER_SECRET
 
 functions:
   create:
@@ -15,32 +13,84 @@ functions:
       - http:
           path: todos
           method: post
-          cors: true
+          cors:
+            origins:
+              - '*'
+            headers:
+              - Content-Type
+              - X-Amz-Date
+              - Authorization
+              - X-Api-Key
+              - X-Amz-Security-Token
+            allowCredentials: true
+          authorizer: arn:aws:lambda:us-east-1:957571668058:function:serverless-authentication-dev-authorize
   readAll:
     handler: handler.readAll
     events:
       - http:
           path: todos
           method: get
-          cors: true
+          cors:
+            origins:
+              - '*'
+            headers:
+              - Content-Type
+              - X-Amz-Date
+              - Authorization
+              - X-Api-Key
+              - X-Amz-Security-Token
+            allowCredentials: true
+          authorizer: arn:aws:lambda:us-east-1:957571668058:function:serverless-authentication-dev-authorize
   readOne:
     handler: handler.readOne
     events:
       - http:
           path: todos/{id}
           method: get
-          cors: true
+          cors:
+            origins:
+              - '*'
+            headers:
+              - Content-Type
+              - X-Amz-Date
+              - Authorization
+              - X-Api-Key
+              - X-Amz-Security-Token
+            allowCredentials: true
+          authorizer: arn:aws:lambda:us-east-1:957571668058:function:serverless-authentication-dev-authorize
+
   update:
     handler: handler.update
     events:
       - http:
           path: todos/{id}
           method: put
-          cors: true
+          cors:
+            origins:
+              - '*'
+            headers:
+              - Content-Type
+              - X-Amz-Date
+              - Authorization
+              - X-Api-Key
+              - X-Amz-Security-Token
+            allowCredentials: true
+          authorizer: arn:aws:lambda:us-east-1:957571668058:function:serverless-authentication-dev-authorize
+
   delete:
     handler: handler.delete
     events:
       - http:
           path: todos/{id}
           method: delete
-          cors: true
+          cors:
+            origins:
+              - '*'
+            headers:
+              - Content-Type
+              - X-Amz-Date
+              - Authorization
+              - X-Api-Key
+              - X-Amz-Security-Token
+            allowCredentials: true
+          authorizer: arn:aws:lambda:us-east-1:957571668058:function:serverless-authentication-dev-authorize
